--- a/vignettes/dp-variance.Rmd
+++ b/vignettes/dp-variance.Rmd
@@ -63,7 +63,7 @@ Arguments
 
 In typical usage, there are two methods to the `dpVariance` class. The `new` method, which creates an object of the class, accepts the following arguments.
 
-* `mechanism` \ Character, the class name of the mechanism used to perturb the true estimate, one of `'mechanismLaplace'` or `'mechanismBootstrap'`.
+* `mechanism` \ Character, the class name of the mechanism used to perturb the true estimate, must be `'mechanismLaplace'`.
 
 * `var.type` \ Character, the type of values in the data frame that will be passed to the mechanism. Should be one of `'numeric'`, `'integer'`, or `'logical'`.
 
