--- a/vignettes/dp-histogram.Rmd
+++ b/vignettes/dp-histogram.Rmd
@@ -42,8 +42,8 @@ Syntax
 x1 <- c(3, 12, 20, 42, 33, 65, 70, 54, 33, 45)
 data <- data.frame(x1)
 
-example_dpHistogram <- dpHistogram$new(var.type = 'numeric', variable = 'x1', n = 10, epsilon=1, rng=c(3,70), 
-                          n.bins=3, delta=10^-3)
+example_dpHistogram <- dpHistogram$new(var.type = 'numeric', variable = 'x1', n = 10, epsilon=1, 
+                                       rng=c(3,70), n.bins=3, delta=10^-3)
 
 out1 <- example_dpHistogram$release(data)
 
@@ -93,23 +93,19 @@ The `release` method accepts a single argument.
 
 * `data` \ Data frame containing a column corresponding the name specified in `variable`.
 
-Attach the sample dataset. 
+Import the PSIlence library and the datasets library, and attach the sample datasets. 
 
 ```{r, eval = TRUE}
 library(PSIlence)
+library(datasets)
 data(PUMS5extract10000)
+data(SocrataWhiteHouseSalaries)
+data(esoph)
 ```
 
 &nbsp;
 
 Calculate a private histogram of a numeric vector with `dpHistogram`:
-
-
-var.type, variable, n, epsilon=NULL, accuracy=NULL, rng=NULL, 
-                          bins=NULL, n.bins=NULL, alpha=0.05, delta=2^-30, error=1e-9,
-                          impute.rng=NULL, impute=FALSE, n.boot=NULL, granularity=NULL, ...)
-                          
-                          
 
 ```{r}
 numeric_histogram <- dpHistogram$new(var.type='numeric', variable='income', n=10000, epsilon=0.1, 
@@ -118,9 +114,31 @@ numeric_histogram$release(PUMS5extract10000)
 print(numeric_histogram$result)
 ```
 
+In the numeric example above, the histogram statistic detects the buckets for the histogram by creating 5 equal-width buckets for the range of the data. But in the result, we can see that a disproportional number of the data points are in the first bucket. This makes sense, as this is income data, and a large portion of people have an income less than \$150,000 dollars (the range of the first bucket). If we have prior knowledge of the data, we can enter specific buckets for the histogram in the `bins` parameter. For example, let's say we want a histogram of incomes less than or equal to \$50,000; \$50,000 - \$100,000; \$100,000 - \$200,000; \$200,000 - \$300,000; \$300,000 - \$400,000; and > \$400,000:
+
+```{r}
+# When entering bins, enter the minimum of the range, the upper bound of each bin, and the maximum of the range
+incomeBins <- c(0,50000, 100000, 200000, 300000, 400000, 750000)
+
+# So in this example, we have 6 bins:
+# 1. (min, 500000]
+# 2. (50000, 100000]
+# 3. (100000, 200000]
+# 4. (200000, 300000]
+# 5. (300000, 400000]
+# 6. (400000, max]
+# where min = the minimum of the dataset = 0
+# and max = the maximum of the dataset = 750000
+
+numeric_histogram <- dpHistogram$new(var.type='numeric', variable='income', n=10000, epsilon=0.1, 
+                                     rng=c(0,750000), n.bins=6, bins=incomeBins)
+numeric_histogram$release(PUMS5extract10000)
+print(numeric_histogram$result)
+```
+
 &nbsp;
 
-To calculate the histogram of a logical vector instead, input a logical vector into `variable` and update `var.type` to 'logical'. Also add a boolean flag for `impute` to indicate if you would like empty values to be imputed from the existing data. (If `impute = TRUE`, then there will only me two bins in the histogram: 0 and 1. If `impute = FALSE`, then there will be three bins in the histogram: 0, 1, and NA.)
+To calculate the histogram of a logical variable, input a logical vector into `variable` and update `var.type` to 'logical'. Also add a boolean flag for `impute` to indicate if you would like empty values to be imputed from the existing data. (If `impute = TRUE`, then there will only me two bins in the histogram: 0 and 1. If `impute = FALSE`, then there will be three bins in the histogram: 0, 1, and NA.)
 
 ```{r}
 logical_histogram <- dpHistogram$new(var.type='logical', variable='married', n=10000, epsilon=0.1, impute = TRUE)
@@ -128,14 +146,21 @@ logical_histogram$release(PUMS5extract10000)
 print(logical_histogram$result)
 ```
 
-&nbsp;
-
-To calculate the histogram of a categorical (or 'character') variable instead, input a character vector into `variable` and update `var.type` to 'character'.
+In the example above, we set the `impute` parameter equal to `TRUE`, meaning that any `NA` (empty) values would be randomly assigned 0 or 1 so no values in the data set are empty, and there is no `NA` bucket in the histogram. By default `impute = FALSE`, so if we do not specify a value for `impute`, then there will be an `NA` bucket in the histogram release:
 
 ```{r}
-library(datasets)
-data(esoph)
+logical_histogram <- dpHistogram$new(var.type='logical', variable='married', n=10000, epsilon=0.1)
+logical_histogram$release(PUMS5extract10000)
+print(logical_histogram$result)
+```
 
+For logical variables, it is never necessary to enter a vector of bins, you just need to specify whether to impute empty values or not.
+
+&nbsp;
+
+To calculate the histogram of a categorical (or 'character') variable, input a character variable name into `variable` and update `var.type` to 'character'.
+
+```{r}
 character_histogram <- dpHistogram(var.type='character', variable='tobgp', n=88, epsilon=1, delta=10^-3)
 character_histogram$release(esoph)
 print(character_histogram)
@@ -143,3 +168,35 @@ print(character_histogram)
 
 Notice that in the character histogram example above, the sample size is very small, only 88 observations, so the `epsilon` and `delta` parameters must be much larger to accomodate the small data size. A large `epsilon` and `delta` indicate less privacy and more accuracy than the small values used in earlier examples with larger sample sizes. However, less privacy indicates more accuracy, which is necessary with small sample sizes that are sensitive to the differentially private noise added during calculation.
 
+Similar to numeric variables, you can enter a specific vector of bins for the histogram for a character variable if you have prior knowledge of the data. In this case, the resulting histogram will have each bin entered in the `bins` vector, even if the bin would be empty in the underlying data:
+
+```{r}
+character_histogram <- dpHistogram(var.type='character', variable="Employee.Status", n=469, epsilon=0.5, delta=10^-5,
+                                   bins=c("Detailee","Employee","Employee (part-time)"))
+character_histogram$release(SocrataWhiteHouseEmployeeSalaries)
+print(character_histogram)
+```
+
+&nbsp;
+
+NEED TO UPDATE THIS ONCE PULL REQUEST IS MERGED --->
+
+Values
+------
+
+The `release` method makes a call to the mechanism, which generates a list of statistical summaries available on the `result` field.
+
+* `result` List, contains the accuracy guarantee, privacy cost, and private release. Other elements reflecting variable post-processing of the release.
+
+&nbsp; 
+
+The list in the `result` attribute has the following values.
+
+* `release` \ Differentially private estimate of the mean. If the bootstrap mechanism is used, one estimate for each bootstrap replication is provided (i.e., vector of length `n.boot`).
+* `accuracy` \ The accuracy guarantee of the release given `epsilon`.
+* `epsilon` \ The privacy cost required to guarantee `accuracy`.
+* `interval` \ Confidence interval of the private estimate given `accuracy`.
+* `std.dev` \ The standard deviation of the vector. Only available for logical vectors.
+* `median` \ The median of the vector. Only available for logical vectors.
+* `histogram` \ The histogram of the vector. Only available for logical vectors.
+* `std.error` \ Estimates of the standard error of the mean. Only available when the bootstrap mechanism is used.
